[package]
name = "rustitude"
version = "0.0.1"
authors = ["rarche <6128431+rarche@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { git = "https://github.com/linebender/druid.git" }
normpath = "0.2.0"
tinyfiledialogs = "3.0"
opener = "0.4.1"
